fixed layout problem with bloom background

--- a/assets/scss/_hero.scss
+++ b/assets/scss/_hero.scss
@@ -83,7 +83,7 @@
     .item:nth-child(1) {
       background: url(../img/hero-images/bloom-bg.jpg) no-repeat;
       background-size:cover;
-      background-position:center;
+      background-position:right;
       .item-info {
         img {
           width:35vw;
